Fix Java 11 compilation errors (instanceof and toList)